--- a/Assignment3.html
+++ b/Assignment3.html
@@ -13,7 +13,7 @@
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <div class="navbar-brand pull-left">
+            <div class="navbar-brand">
               <h1>Food, LLC</h1>
             </div>
             <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
