--- a/Assignment3.html
+++ b/Assignment3.html
@@ -34,7 +34,9 @@
       </nav>
     </header>
     <h1 class="text-center">Our Menu</h1>
-    <div id="content" class="container col-xs-12">
+    <div id="content" class="container">
+      <div class"row">
+        <div class="col-xs-12>
       <div id="heading">
         Chicken
       </div>
@@ -114,6 +116,8 @@ Elit ut aliquam purus sit. Fames ac turpis egestas sed tempus urna.
 Odio pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus. Risus quis varius quam quisque. Nunc vel risus commodo viverra. Lacinia quis vel eros donec ac. Vitae congue eu consequat ac felis
 donec et odio. Tristique risus nec feugiat in fermentum posuere. Suspendisse in est ante in nibh. Nibh nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Ultrices eros in cursus turpis massa tincidunt dui. Cras pulvinar mattis nunc sed blandit libero volutpat sed.    Libero id faucibus nisl tincidunt eget nullam non nisi est. Diam sit amet nisl suscipit adipiscing bibendum est. In cursus turpis massa tincidunt dui ut ornare. Nibh sit amet commodo nulla facilisi nullam vehicula. Eleifend mi in nulla posuere sollicitudin.
 
+                       </div>
+                       </div>
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
