--- a/Mod3Assign.html
+++ b/Mod3Assign.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Menu</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/Assign3.css">
+    <link rel="stylesheet" href="css/Assignment3.css">
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <div class="navbar-brand pull-left">
-              <h1>Food, LLC</h1>
+              Food, LLC
             </div>
             <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -38,7 +38,7 @@
       <div class"row">
         <div class="col-xs-12>
       <div id="heading">
-        Chicken
+                       <h2 class="text-center">Chicken</h2>
       </div>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi bibendum neque egestas congue quisque egestas diam in arcu.
        Sed nisi lacus sed viverra tellus in hac. Posuere urna nec tincidunt praesent semper feugiat. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Quam viverra orci
